--- a/index.html
+++ b/index.html
@@ -7,8 +7,9 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
     <link rel="stylesheet" href="css/style.css">
 </head>
-<body id="particles-js" class="particles-js">
 
+<body class="particles-js">
+    
 <header>
 
     <div id="menu" class="fas fa-bars"></div>
@@ -18,10 +19,10 @@
         <a href="#about">about</a>
         <a href="#portfolio">portfolio</a>
         <a href="#contact">contact</a>
-        <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">experimental</a>
     </nav>
 
 </header>
+<background id="particles-js">
 
 <section class="home" id="home">
 
@@ -34,7 +35,7 @@
         <h3> I'M <span>MARK FERRERAS</span> </h3>
         <p>An aspiring Game Developer & Pilot. <br>
             A person with confidence and a passion for games.<br>
-            A resourceful and responsible man, presenting to you my CV website and portfolio.
+            A resourceful and responsible man, presenting to you my portfolio.
         </p>
         <a href="#about" class="btn">about me</a>
     </div>
@@ -48,41 +49,73 @@
     <div class="row">
 
         <div class="box">
-            <h3 class="title">coding skills</h3>
+            <h3 class="title">hard skills</h3>
             <div class="progress">
-                <h3> html <span>70%</span> </h3>
+                <h3> Web Design <span>77%</span> </h3>
                 <div class="bar"><span></span></div>
             </div>
             <div class="progress">
-                <h3> css <span>60%</span> </h3>
+                <h3> Computer Literacy <span>84%</span> </h3>
                 <div class="bar"><span></span></div>
             </div>
             <div class="progress">
-                <h3> js <span>15%</span> </h3>
+                <h3> Video Editing <span>20%</span> </h3>
                 <div class="bar"><span></span></div>
             </div>
             <div class="progress">
-                <h3> c++ <span>50%</span> </h3>
+                <h3> Testing <span>80%</span> </h3>
                 <div class="bar"><span></span></div>
             </div>
             <div class="progress">
-                <h3> Java <span>38%</span> </h3>
+                <h3> js <span>35%</span> </h3>
+                <div class="bar"><span></span></div>
+            </div>
+            <div class="progress">
+                <h3> MySQL <span>20%</span> </h3>
+                <div class="bar"><span></span></div>
+            </div>
+            <div class="progress">
+                <h3> c++ <span>60%</span> </h3>
+                <div class="bar"><span></span></div>
+            </div>
+            <div class="progress">
+                <h3> Java <span>50%</span> </h3>
                 <div class="bar"><span></span></div>
             </div>
         </div>
 
         <div class="box">
-            <h3 class="title">professional skills</h3>
+            <h3 class="title">soft skills</h3>
             <div class="progress">
-                <h3> web design <span>77%</span> </h3>
+                <h3> Adaptability <span>87%</span> </h3>
                 <div class="bar"><span></span></div>
             </div>
             <div class="progress">
-                <h3> web development <span>48%</span> </h3>
+                <h3> Teamwork <span>80%</span> </h3>
                 <div class="bar"><span></span></div>
             </div>
             <div class="progress">
-                <h3> graphic design <span>18%</span> </h3>
+                <h3> Time Management <span>68%</span> </h3>
+                <div class="bar"><span></span></div>
+            </div>
+            <div class="progress">
+                <h3> Communication <span>85%</span> </h3>
+                <div class="bar"><span></span></div>
+            </div>
+            <div class="progress">
+                <h3> Resourcefulness <span>100%</span> </h3>
+                <div class="bar"><span></span></div>
+            </div>
+            <div class="progress">
+                <h3> Openness to Criticism <span>80%</span> </h3>
+                <div class="bar"><span></span></div>
+            </div>
+            <div class="progress">
+                <h3> Creativity <span>70%</span> </h3>
+                <div class="bar"><span></span></div>
+            </div>
+            <div class="progress">
+                <h3> Critical Thinking <span>65%</span> </h3>
                 <div class="bar"><span></span></div>
             </div>
         </div>
@@ -90,38 +123,65 @@
         <div class="box">
             <h3 class="title">experience</h3>
             <div class="exp-box">
-                <h3>Zero Experience</h3>
-                <p>I'm currently still studying and improving my skills</p>
+                <h3>landing page commision || September 25, 2022</h3>
+                <p>ED-FIRM INC.</p>
+                <p>Developed a Landing page for a company. They will use it as a page whenever a customer doesn't pay for their internet services. The client was satisfied and will use it in their company.</p>
             </div>
         </div>
 
         <div class="box">
             <h3 class="title">education</h3>
             <div class="exp-box">
-                <h3>Philippians Montessori School</h3>
-                <p> Studied From Grade 3 - Grade 6. Graduated with Best in Science, and Best in English</p>
+                <h3>CIIT Senior High School, Inc.</h3>
+                <ul>
+                    <li> 2021 - Present</li>
+                </ul>
             </div>
             <div class="exp-box">
                 <h3>Siena College of Taytay</h3>
-                <p>Studied from Grade 7 - Grade 10. Graduated with Perfect Attendance</p>
+                <ul>
+                    <li>2017 - 2021</li>
+                </ul>
             </div>
             <div class="exp-box">
-                <h3>CIIT College</h3>
-                <p>Currently Studying - Grade 11.</p>
+                <h3>Philippians Montessori School Inc.</h3>
+                <ul>
+                    <li>2014 - 2017</li>
+                </ul>
+                <h3>Young St. John Integrated School</h3>
+                <uL>
+                    <li>2011 - 2014</li>
+                </uL>
+            </div>
+        </div>
+
+        <div class="box">
+            <h3 class="title">career objective</h3>
+            <div class="exp-box">
+                <h4>To learn and improve my skills to help me with my career as a programmer and developer, as well as to widen my horizon through experience.</h4>
+            </div>
+        </div>
+
+        <div class="box">
+            <h3 class="title">career summary</h3>
+            <div class="exp-box">
+                <h4>A  Friendly, Hard-working programmer. Willing to learn new skills from the industry. proficient with C++, Java, and SQL. Can adapt to different environments. Has teamwork and strong communication—well-versed in Computers and Web designing.  </h4>
             </div>
         </div>
 
     </div>
 
+        
+
     <div class="download">
-        <a href="https://drive.google.com/file/d/1nGcOWA5YgTIDKdcadtU4mRyR4PHTtcmf/view?usp=sharing" class="btn"> download CV </a>
+        <a target="_blank" href="https://drive.google.com/file/d/1JGXIJAF5xEKHHBa4usuUXhiU_7eOmQVq/view?usp=share_link" class="btn"> download CV </a>
     </div>
 
 </section>
 
 <section class="portfolio" id="portfolio">
 
-    <h1 class="heading"> <span>my</span> portfolio </h1>
+    <h1 class="heading"> <span>my</span> achievements </h1>
 
     <div class="button-container">
         <div class="btn" data-filter="all">all</div>
@@ -195,8 +255,10 @@
         </div>
 
     </div>
+</section>
 
-    <div class="row">
+</background>
+    <!--<div class="row">
 
         <form action="">
             <div class="inputBox">
@@ -208,9 +270,8 @@
             <button class="btn"> send message </button>
         </form>
 
-    </div>
+    </div>-->
 
-</section>
 
 <div class="footer">Mark Nielsen E. Ferreras | 11 - Python | Experimental</div>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
