--- a/index.html
+++ b/index.html
@@ -195,6 +195,7 @@
             <img src="images/election-img.png" alt="">
             <div class="info">
                 <h3>Election Website</h3>
+                <p class="desc">Created a website for the Election 2022 using VS Code</p>
             </div>
         </div>
 
@@ -202,6 +203,7 @@
             <img src="images/school-img.png" alt="">
             <div class="info">
                 <h3>School Website</h3>
+                <p class="desc">Created a promotional website for CIIT Senior High School using VS Code</p>
             </div>
         </div>
 
@@ -209,6 +211,7 @@
             <img src="images/Motor-img.png" alt="">
             <div class="info">
                 <h3>Motorcycle Promo Website</h3>
+                <p class="desc">Created a promotional website for a Motorcycle using VS Code</p>
             </div>
         </div>
 
@@ -216,6 +219,7 @@
             <img src="images/java-UI-img.png" alt="">
             <div class="info">
                 <h3>Student System using Java swing</h3>
+                <p class="desc">Developed a Student System using Java swing in NetBeans</p>
             </div>
         </div>
 
@@ -223,6 +227,7 @@
             <img src="images/cashier-admin-img.png" alt="">
             <div class="info">
                 <h3>Cashier System</h3>
+                <p class="desc">Developed a Cashier System using C++ in CodeBlocks</p>
             </div>
         </div>
 
